tests/compile_fail/borrow/struct_and_field.stderr
error: `#[borrow(...)]` cannot be placed on both struct and its field
 --> tests/compile_fail/borrow/struct_and_field.rs:4:5
  |
4 |     #[borrow]
  |     ^
